--- a/styles/_report.scss
+++ b/styles/_report.scss
@@ -54,8 +54,8 @@
   position: relative;
 }
 
-#sunPercentHistoRpt {
-  margin-left: -50px;
+#sunPercentHistoRpt, #reportResultsHisto {
+  margin-left: 20px;
 }
 
 #reportAngleControls {
